Fix wrong margin value on errors container

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2132,10 +2132,12 @@ form.create-community-form button[type="submit"],
   text-align: center;
 }
 
-.allauth.allauth-logout .allauth-container {
+.allauth.allauth-logout .allauth-container,
+.errors-container {
   margin: 0;
   margin-left: 15rem;
 }
+
 .allauth-title,
 .error-title {
   font-size: 2em;
